feat: intestazione toboolist e link google font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toboolist</title>
+    <!-- GOOGLE FONT - ROBOTO -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- /GOOGLE FONT - ROBOTO -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- intestazione -->
+    <header>
+      <img src="img/Logo.png" alt="logo boolean" />
+      <span>Toboolist</span>
+    </header>
+    <!-- /intestazione -->
+  </body>
 </html>
