--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
       <span>Toboolist</span>
     </header>
     <!-- /intestazione -->
+    <main>
+      <div class="container">
+        <div class="button pad">
+          <button class="add" id="task">Add Task</button>
+          <button class="add" id="section">Add Section</button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
