feat: list new task, today

--- a/index.html
+++ b/index.html
@@ -27,6 +27,31 @@
           <button class="add" id="task">Add Task</button>
           <button class="add" id="section">Add Section</button>
         </div>
+
+        <!-- lista -->
+        <div class="list pad">
+          <!-- new task -->
+          <div class="new">
+            <h3 class="space">New Task</h3>
+            <ul>
+              <li class="editorial">Quarterly Newsletter</li>
+            </ul>
+          </div>
+          <!-- /new task -->
+
+          <!-- /today -->
+          <div class="today">
+            <h3 class="space">Today</h3>
+            <ul>
+              <li class="editorial">Recruting blog post</li>
+              <li class="mobile">Mobile app launch</li>
+              <li class="interview">Interview John H.</li>
+              <li class="summit">Summit update to mobile storefronts</li>
+            </ul>
+          </div>
+          <!-- /today -->
+        </div>
+        <!-- /lista -->
       </div>
     </main>
   </body>
