feat: list upcoming

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
             </ul>
           </div>
           <!-- /today -->
+
+          <!-- upcoming -->
+          <div class="upcoming">
+            <h3 class="space">Upcoming</h3>
+            <ul>
+              <li class="schedule">Schedule meeting with Alex</li>
+              <li class="homepage">Homepage refresh</li>
+              <li class="onboard">Onboard new Sales Team members</li>
+              <li class="editorial">Review editorial calendar</li>
+            </ul>
+          </div>
+          <!-- /upcoming -->
         </div>
         <!-- /lista -->
       </div>
